# guganav

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
src/guga_common/: CMakeLists.txt  README.md  package.xml
src/guga_common/include/guga_common/: common_libs.hpp
src/guga_common/include/guga_common/shm/: shm_layout.hpp  shm_reader.hpp  shm_types.hpp  shm_writer.hpp
src/guga_common/src/shm/: shm_reader.cpp  shm_writer.cpp
src/guga_controller/mpc_controller/: .gitignore  CMakeLists.txt  README.md  mpc_controller.xml  package.xml
src/guga_controller/mpc_controller/config/: mpc_controller.yaml
src/guga_controller/mpc_controller/sim/: generate_acados_c.py  mpc_solver.py  mpc_solver_augmented.py  sim_compare_models.py  sim_path_tracking.py
src/guga_controller/mpc_controller/src/core/: mpc_solver.cpp  mpc_wrapper.cpp  nav2_wrapper.cpp  omni_kinematics.cpp
src/guga_controller/mpc_controller/src/node/: mpc_controller_node.cpp
src/guga_controller/mpc_controller/src/traj_analysis/: bspline_generator.cpp  discrete_generator.cpp  ultis.cpp
src/guga_controller/mpc_controller/src/trajectory/: minco_generator.cpp
src/guga_controller/mpc_controller/test/py_sim/: .gitignore  c_codegen.py  c_codegen_omni.py  c_codegen_unicycle.py  generate_acados_c.py  mpc_solver.py  test_model.py  test_model_cython.py
src/guga_controller/mpc_controller/test/test_model_cc/: CMakeLists.txt  plot_results.py  test_unicycle_solver.cc
src/guga_controller/pb_omni_pid_pursuit_controller/: CMakeLists.txt  README.md  pb_omni_pid_pursuit_controller.xml
src/guga_controller/pb_omni_pid_pursuit_controller/include/pb_omni_pid_pursuit_controller/: omni_pid_pursuit_controller.hpp  pathhandler.hpp
src/guga_controller/pb_omni_pid_pursuit_controller/src/: geometry_utils.cpp  omni_pid_pursuit_controller.cpp  pathhandler.cpp  visualise.cpp
src/guga_controller/pb_omni_pid_pursuit_controller/src/core/: geometry_utils.cpp  pathhandler.cpp  pid.cpp  visualise.cpp
src/guga_controller/pb_omni_pid_pursuit_controller/src/node/: omni_pid_pursuit_controller_node.cpp
src/guga_controller/pb_omni_pid_pursuit_controller/test/: test_approach_scaling.cpp  test_geometry_utils.cpp  test_pathhandler.cpp  test_pid.cpp  test_types.cpp  test_visualise.cpp
src/guga_decision/simple_decision/: CMakeLists.txt  README.md  package.xml
src/guga_decision/simple_decision/launch/: simple_decision.launch.py
src/guga_decision/simple_decision/src/: context_environment_context.cpp  decision.cpp  simple_decision.cpp  transform.cpp
src/guga_decision/simple_decision/src/adapter/: transform.cpp
src/guga_decision/simple_decision/src/core/: context_environment_context.cpp  decision.cpp
src/guga_decision/simple_decision/src/node/: simple_decision.cpp
src/guga_decision/simple_decision/test/: .clangd  README.md  test_decision.cpp  test_environment_context.cpp  test_helpers.hpp  test_simple_decision.cpp  test_transform.cpp
src/guga_driver/camera_interface/: CMakeLists.txt  package.xml
src/guga_driver/camera_interface/include/camera_interface/: camera_interface.hpp
src/guga_driver/hik_driver/: CMakeLists.txt  package.xml
src/guga_driver/hik_driver/config/: hik.yaml
src/guga_driver/hik_driver/include/hik_driver/: hik_camera_main.hpp  hik_camera_node.hpp
src/guga_driver/hik_driver/launch/: hik_driver.launch.py
src/guga_driver/hik_driver/src/: hik_camera_main.cpp  hik_camera_node.cpp
src/guga_driver/serial_driver/: CMakeLists.txt  README.md  package.xml
src/guga_driver/serial_driver/include/serial_driver/: ros_serial_bridge.hpp  serial_driver_main.hpp  serial_driver_node.hpp
src/guga_driver/serial_driver/launch/: communication.launch.py
src/guga_driver/serial_driver/src/: Com.cpp  bridge.cpp  serial_driver_main.cpp  serial_driver_node.cpp
src/guga_interfaces/: CMakeLists.txt  README.md  package.xml
src/guga_perception/rog_map_layer/: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
src/guga_perception/rog_map_layer/include/rog_map_layer/: esdf_config.hpp  esdf_incremental.hpp  esdf_layer.hpp  esdf_map.hpp  esdf_parallel.hpp
src/guga_perception/rog_map_layer/src/: esdf_incremental.cpp  esdf_layer.cpp  esdf_map.cpp  esdf_parallel.cpp
src/guga_planner/bspline_opt/: CMakeLists.txt  package.xml
src/guga_planner/bspline_opt/docs/: DESIGN.md
src/guga_planner/bspline_opt/include/bspline_opt/: bspline_optimizer.hpp
src/guga_planner/bspline_opt/src/: bspline_optimizer.cpp
src/guga_planner/bspline_opt/test/: joint_test.cpp  test_bspline.cpp  test_results.txt
src/guga_planner/bspline_opt/test/bspline_viz_data/: benchmark.csv  s3_maze_curvature.csv  s4_obstaclefield_curvature.csv
src/guga_planner/jps_planner/: CMakeLists.txt  jps_planner_plugin.xml  package.xml
src/guga_planner/jps_planner/src/: jps_algorithm.cpp  jps_planner.cpp
src/guga_planner/jps_planner/test/: jps_viz_exporter.cpp  test_helpers.hpp  test_jps.cpp  test_results.txt
src/guga_test/: CMakeLists.txt  README.md
src/guga_test/include/: intel_gpu_matrix.hpp
src/guga_test/scripts/: build.sh  test_python.py  test_sys.py
src/guga_test/src/: test_intelGpuMatrix.cpp  test_pangolin.cpp  test_tbb.cpp
src/guga_ui/guga_ui_common/: CMakeLists.txt  README.md
src/guga_ui/guga_ui_common/test/: CMakeLists.txt  test_shm_layout.cpp  test_shm_write_read.cpp  test_ui_types.cpp
src/guga_ui/guga_ui_pangolin/: CMakeLists.txt
src/guga_ui/guga_ui_pangolin/include/: data_source.hpp  panel_const.hpp  panel_decision.hpp  panel_hud.hpp  pangolin_window.hpp  render_3d.hpp
src/guga_ui/guga_ui_pangolin/src/: data_source.hpp  main.cpp  panel_decision.cpp  panel_hud.cpp  pangolin_window.cpp  render_3d.hpp  render_decision.hpp  render_hud.hpp
src/guga_ui/guga_ui_pangolin/test/: CMakeLists.txt  test_data_source.cpp  test_pangolin_render.cpp  test_ui_data.cpp
src/guga_ui_old/guga_ui_common/: package.xml
src/guga_ui_old/guga_ui_pangolin/: CMakeLists.txt  package.xml
src/guga_ui_old/guga_ui_pangolin/include/: panel_hud.hpp
src/guga_ui_old/guga_ui_pangolin/src/: pangolin_window.cpp
(+220 files in other folders)
