<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guga_ui_common</name>
  <version>0.1.0</version>
  <description>Header-only shared memory communication library for guga_ui.
    Defines POD data types, shm layout, and lock-free writer/reader APIs.
    No ROS2 dependency — usable from both ROS nodes and standalone processes.</description>
  <maintainer email="ld2382619813@163.com">ld</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
